mobile layout bug fix

--- a/load/style.css
+++ b/load/style.css
@@ -575,7 +575,7 @@ and (orientation : landscape) {
 	}
 	
 	.center {
-		max-width:620px;
+		max-width:628px;
 	}
 	
 }	
